# bluetooth-nes-advantage

./: .gitignore  AGENTS.md  LICENSING.md  NOTICE  README.md  ble-proxy.json
.github/workflows/: pages.yml
docs/: FIRMWARE.md  HARDWARE.md  INSTALL.md  MANUAL.md  switch_pro_protocol.md
docs/videos/: web-config-test-live.webm
firmware/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/components/btstack/: CMakeLists.txt  README.md
firmware/components/btstack/include/: btstack_config.h
firmware/components/btstack/port/: btstack_hal_esp32.c  hci_transport_esp32_vhci.c
firmware/components/cjson/: CMakeLists.txt
firmware/main/: CMakeLists.txt  app_control.hpp  app_main.cpp  battery.cpp  battery.hpp  board_config.h  bt_ble.cpp  bt_config.cpp  bt_config.hpp  bt_pro.cpp  bt_pro_btstack.cpp  bt_transport.cpp  bt_transport.hpp  console.cpp  console.hpp  nes_controller.cpp  nes_controller.hpp  power.cpp  power.hpp  settings.cpp  settings.hpp
hardware/: .gitignore  README.md
hardware/bt-nes-advantage-jack-plug/: README.md  bt-nes-advantage-jack-plug.FCStd  bt-nes-advantage-jack-plug.stl
hardware/bt-nes-advantage-pcb/: bt-nes-advantage-pcb.kicad_pcb  bt-nes-advantage-pcb.kicad_pro  bt-nes-advantage-pcb.kicad_sch  sym-lib-table
hardware/bt-nes-advantage-pcb/libs/3dmodels/: PJ-040-SMT-TR.step
hardware/bt-nes-advantage-pcb/libs/footprints/: CUI_PJ-040-SMT-TR.kicad_mod
hardware/bt-nes-advantage-pcb/libs/symbols/: PJ-040-SMT-TR.kicad_sym
tools/: README.md  patch_bluedroid_cod.py  patch_bluedroid_hid_intr.py  patch_bluedroid_quiet_slave.py  patch_bluedroid_sc_mode.py  patch_bluedroid_sniff.py  serial_proxy.py
web/: DESIGN.md  PRODUCT.md  README.md  app.js  index.html
